[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/Characters/character_femaleAdventurer_sheet.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Characters/Character.gd" type="Script" id=2]
[ext_resource path="res://Assets/Level_1/backgroundColorGrass.png" type="Texture" id=3]
[ext_resource path="res://Assets/Characters/tank_explosion1.png" type="Texture" id=4]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 52.8775, 80.2045 )

[sub_resource type="Animation" id=3]
resource_name = "Walk"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( -0.1, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 36, 43 ]
}

[node name="Character_2" type="KinematicBody2D"]
scale = Vector2( 0.5, 0.5 )
collision_mask = 2
script = ExtResource( 2 )
jumpSpeed = -800
infiniteJumping = true

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
vframes = 5
hframes = 9

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 25.9498 )
shape = SubResource( 2 )

[node name="CantSee" type="Node2D" parent="."]
z_index = 3

[node name="Sprite5" type="Sprite" parent="CantSee"]
modulate = Color( 0, 0, 0, 1 )
scale = Vector2( 10.6921, 10.6921 )
texture = ExtResource( 4 )

[node name="Sprite8" type="Sprite" parent="CantSee"]
visible = false
modulate = Color( 0, 0, 0, 1 )
scale = Vector2( 8.36908, 8.36908 )
texture = ExtResource( 4 )

[node name="Sprite6" type="Sprite" parent="CantSee"]
modulate = Color( 0, 0, 0, 1 )
scale = Vector2( 12.9193, 12.9193 )
texture = ExtResource( 4 )

[node name="Sprite7" type="Sprite" parent="CantSee"]
modulate = Color( 0, 0, 0, 1 )
scale = Vector2( 16.0374, 16.0374 )
texture = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="CantSee"]
modulate = Color( 0, 0, 0, 1 )
position = Vector2( 2066.16, -88.8118 )
scale = Vector2( 2.908, 5.14351 )
texture = ExtResource( 3 )

[node name="Sprite2" type="Sprite" parent="CantSee"]
modulate = Color( 0, 0, 0, 1 )
position = Vector2( -2066.8, -266.848 )
scale = Vector2( 2.908, 5.25922 )
texture = ExtResource( 3 )

[node name="Sprite3" type="Sprite" parent="CantSee"]
modulate = Color( 0, 0, 0, 1 )
position = Vector2( -381.956, 1826.6 )
scale = Vector2( 2.908, 2.36955 )
texture = ExtResource( 3 )

[node name="Sprite4" type="Sprite" parent="CantSee"]
modulate = Color( 0, 0, 0, 1 )
position = Vector2( 70.2676, -1818.56 )
scale = Vector2( 2.908, 2.36955 )
texture = ExtResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Walk = SubResource( 3 )
