[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/Characters/character_zombie_sheet.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Characters/Character.gd" type="Script" id=2]
[ext_resource path="res://Assets/textureProgress.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 54.3026, 87.0098 )

[sub_resource type="Animation" id=3]
resource_name = "Walk"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( -0.1, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 36, 43 ]
}

[node name="Character_3" type="KinematicBody2D"]
scale = Vector2( 0.5, 0.5 )
collision_mask = 2147483650
collision/safe_margin = 1.0
script = ExtResource( 2 )
jumpSpeed = -200
canJump = true
eyeDisability = true

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
vframes = 5
hframes = 9

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 1.5874, 31.7844 )
shape = SubResource( 2 )

[node name="EyeDisabilityTimer" type="Timer" parent="."]
wait_time = 5.0

[node name="TextureProgress" type="TextureProgress" parent="."]
margin_left = -32.0
margin_top = -160.0
margin_right = 32.0
margin_bottom = -96.0
max_value = 60.0
texture_progress = ExtResource( 3 )
fill_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="textureProgressTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Walk = SubResource( 3 )
[connection signal="timeout" from="EyeDisabilityTimer" to="." method="_on_EyeDisabilityTimer_timeout"]
[connection signal="timeout" from="textureProgressTimer" to="." method="_on_textureProgressTimer_timeout"]
